@@ -96,7 +96,6 @@
 				<configuration>
 					<source>15</source>
 					<target>15</target>
-					<compilerArgs>--enable-preview</compilerArgs>
 				</configuration>
 			</plugin>
 		</plugins>
